--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "px2rem-loader": "^0.1.8",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "vux": "^2.8.1"
   },
   "devDependencies": {
